# DA_second_project

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
data_structures/: Graph.h  MutablePriorityQueue.h  UFDS.h
docs/html/: AlgorithmAggregator_8cpp.html  AlgorithmAggregator_8cpp__incl.map  AlgorithmAggregator_8cpp__incl.md5  AlgorithmAggregator_8h.html  AlgorithmAggregator_8h__dep__incl.map  AlgorithmAggregator_8h__dep__incl.md5  AlgorithmAggregator_8h__incl.map  AlgorithmAggregator_8h__incl.md5  AlgorithmAggregator_8h_source.html  BasicAlgorithm_8cpp.html  BasicAlgorithm_8cpp__incl.map  BasicAlgorithm_8cpp__incl.md5  BasicAlgorithm_8h.html  BasicAlgorithm_8h__dep__incl.map  BasicAlgorithm_8h__dep__incl.md5  BasicAlgorithm_8h__incl.map  BasicAlgorithm_8h__incl.md5  BasicAlgorithm_8h_source.html  CLI_8cpp.html  CLI_8cpp__incl.map  CLI_8cpp__incl.md5  CLI_8h.html  CLI_8h__dep__incl.map  CLI_8h__dep__incl.md5  CLI_8h__incl.map  CLI_8h__incl.md5  CLI_8h_source.html  ColoringAlgorithm_8h.html  ColoringAlgorithm_8h__dep__incl.map  ColoringAlgorithm_8h__dep__incl.md5  ColoringAlgorithm_8h__incl.map  ColoringAlgorithm_8h__incl.md5  ColoringAlgorithm_8h_source.html  ExecutionPlan_8h.html  ExecutionPlan_8h__dep__incl.map  ExecutionPlan_8h__dep__incl.md5  ExecutionPlan_8h_source.html  Graph_8h.html  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  (+214 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  (+40 more)
include/: AlgorithmAggregator.h  BasicAlgorithm.h  CLI.h  ColoringAlgorithm.h  ExecutionPlan.h  GraphColoringAlgorithm.h  GraphColoringStrategy.h  HybridAlgorithm.h  InfoMenu.h  MutablePriorityQueue.h  OutputWriter.h  SpillingAlgorithm.h  SplittingAlgorithm.h  TxtParser.h  UFDS.h  WebBuilder.h  allocation.h
input/: inputExample.cpp  liveRangesExamples.cpp
input/ranges/: ranges6.txt  ranges7.txt  ranges8.txt
input/registers/: registers.txt  registers1.txt  registers1_splitting.txt  registers2_freeAlgo.txt  registers2_spilling.txt  registers3_splitting.txt
src/: AlgorithmAggregator.cpp  BasicAlgorithm.cpp  CLI.cpp  GraphColoringStrategy.cpp  HybridAlgorithm.cpp  InfoMenu.cpp  OutputWriter.cpp  SpillingAlgorithm.cpp  SplittingAlgorithm.cpp  TxtParser.cpp  UFDS.cpp  WebBuilder.cpp  main.cpp  test.cpp
test/: registers4.txt
